manifests/project-registry-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-registry-backend-service
  labels:
    app: project-registry-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: project-registry-backend
  type: ClusterIP
