manifests/project-registry-backend-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # /v1beta is deprecated in version 1.19+, use /v1 instead
kind: Ingress
metadata:
  name: project-registry-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ngnix.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /backend(.+)
        backend:
          serviceName: project-registry-backend-service
          servicePort: 8080
